# aemeath

./: .gitignore  Justfile  README.md  cliff.toml  com.damillora.aemeath.metainfo.xml  project.conf
.github/scripts/: artifacts-yml.sh  buildstream-conf.sh  complete-build.sh  generate-changelog.sh  generate-version.sh  rclone-conf.sh
.github/vendoring/: tailscale.sh
.github/workflows/: build.yml  release-github-runner.yml  release.yml  update.yml  vendor.yml
.woodpecker/: build.yml
elements/: binary-seed.bst  bst-plugins-community.bst  bst-plugins.bst  freedesktop-sdk.bst
elements/aemeath/: bootable.bst  desktop.bst  minimal.bst  os.bst  platform.bst
elements/bootstrap/: autoconf.bst  automake.bst  bash.bst  binutils-stage1.bst  binutils-stage2.bst  bison.bst  coreutils.bst  diffutils.bst  file-stage1.bst  file.bst  filesystem.bst  findutils.bst  gawk.bst  gcc-stage1.bst  gcc-stage2.bst  gettext-tools.bst  glibc.bst  grep.bst  gzip.bst  libstdcxx-headers.bst  libstdcxx-libs.bst  libtool.bst  linux-api-headers.bst  m4.bst  make.bst  ncurses.bst  patch.bst  perl.bst  pkgconf.bst  python3.bst  sed.bst  tar.bst  texinfo.bst  util-linux.bst  xz.bst  zstd.bst
elements/components/: bootc-config.bst  bootc.bst  kde-plasma.bst  kf6.bst  os-release.bst  plasma.bst  qt6-toolkit.bst  qt6.bst
elements/oci/: aemeath.bst  minimal.bst  platform.bst
elements/sources/: acl.yml  (+89 more)
files/os-release/: issue  meson.build  meson.options  os-release.in
include/: aliases.yml  artifacts.yml  flags-env.yml  image-version.yml  install-dirs.yml  versions.yml
plugins/: gnu.py
(+1113 files in other folders)
